// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stores a sequence of edits 1`] = `
{
  "period": 3,
  "serial": 3,
  "stack": {
    "edits": [
      {
        "change": [
          [
            1,
            "foo",
          ],
        ],
        "timestamp": 0,
      },
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "bar",
          ],
        ],
        "timestamp": 10,
      },
      {
        "change": [
          [
            -1,
            3,
          ],
          [
            0,
            3,
          ],
        ],
        "timestamp": 20,
      },
    ],
    "next": null,
    "snapshot": "bar",
  },
}
`;

exports[`stores a sequence of edits onto the next stack 1`] = `
{
  "period": 3,
  "serial": 4,
  "stack": {
    "edits": [
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "bar",
          ],
        ],
        "timestamp": 10,
      },
      {
        "change": [
          [
            -1,
            3,
          ],
          [
            0,
            3,
          ],
        ],
        "timestamp": 20,
      },
      {
        "change": [
          [
            0,
            3,
          ],
          [
            1,
            "baz",
          ],
        ],
        "timestamp": 30,
      },
    ],
    "next": {
      "edits": [
        null,
        null,
        {
          "change": [
            [
              1,
              "bar",
            ],
          ],
          "timestamp": 30,
        },
      ],
      "next": null,
      "snapshot": "bar",
    },
    "snapshot": "barbaz",
  },
}
`;

exports[`stores a sequence of edits onto the third stack 1`] = `
{
  "period": 3,
  "serial": 10,
  "stack": {
    "edits": [
      {
        "change": [
          [
            0,
            7,
          ],
          [
            1,
            "h",
          ],
        ],
        "timestamp": 70,
      },
      {
        "change": [
          [
            0,
            8,
          ],
          [
            1,
            "i",
          ],
        ],
        "timestamp": 80,
      },
      {
        "change": [
          [
            0,
            9,
          ],
          [
            1,
            "j",
          ],
        ],
        "timestamp": 90,
      },
    ],
    "next": {
      "edits": [
        {
          "change": [
            [
              1,
              "abc",
            ],
          ],
          "timestamp": 30,
        },
        {
          "change": [
            [
              0,
              3,
            ],
            [
              1,
              "def",
            ],
          ],
          "timestamp": 60,
        },
        {
          "change": [
            [
              0,
              6,
            ],
            [
              1,
              "ghi",
            ],
          ],
          "timestamp": 90,
        },
      ],
      "next": null,
      "snapshot": "abcdefghi",
    },
    "snapshot": "abcdefghij",
  },
}
`;
